<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="220dp"
        android:layout_marginStart="-79dp"
        android:layout_marginTop="-45dp"
        android:src="@drawable/_kdh9qjj"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="220dp"
        android:layout_marginEnd="-71dp"
        android:layout_marginBottom="-60dp"
        android:src="@drawable/yysaugxx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/welcomeRegister"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="40dp"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconLogin"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/untitled_design"
        app:layout_constraintTop_toBottomOf="@id/welcomeRegister"
        app:layout_constraintStart_toStartOf="@id/welcomeRegister"
        app:layout_constraintEnd_toEndOf="@id/welcomeRegister"/>

<!--    Edit text for Register-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iconLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/nameEditTextLayout"
        app:layout_constraintStart_toStartOf="@id/nameEditTextLayout"
        app:layout_constraintTop_toBottomOf="@id/nameEditTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/emailEditTextLayout"
        app:layout_constraintEnd_toEndOf="@id/emailEditTextLayout"
        app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_password" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    Button for register -->

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button"
        android:layout_marginTop="28dp"
        android:text="@string/signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="@id/passwordEditTextLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordEditTextLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>